--- a/.github/workflows/Deployment_cyoagame.yml
+++ b/.github/workflows/Deployment_cyoagame.yml
@@ -31,7 +31,8 @@ jobs:
       with:
         push: true
         tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_eb7fe45702c144ca8b8ec06ebb809f23 }}/rylanmattocks/cyoagame:${{ github.sha }}
-        file: ../Backend/Dockerfile
+        file: Backend/Dockerfile
+        context: Backend/
 
   deploy:
     runs-on: ubuntu-latest
