--- a/.github/workflows/Deployment_cyoagame.yml
+++ b/.github/workflows/Deployment_cyoagame.yml
@@ -25,6 +25,8 @@ jobs:
         registry: https://registry-1.docker.io/
         username: ${{ secrets.AzureAppService_ContainerUsername_eb7fe45702c144ca8b8ec06ebb809f23 }}
         password: ${{ secrets.AzureAppService_ContainerPassword_18d9b200b4c642c7ac8198a21746e48a }}
+    - name: Log docker tag
+      run: echo "Docker tag; index.docker.io/${{ secrets.AzureAppService_ContainerUsername_eb7fe45702c144ca8b8ec06ebb809f23 }}/cyoagame:${{ github.sha }}"
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
