--- a/.github/workflows/Deployment_cyoagame.yml
+++ b/.github/workflows/Deployment_cyoagame.yml
@@ -25,6 +25,9 @@ jobs:
         registry: https://index.docker.io/
         username: ${{ secrets.AzureAppService_ContainerUsername_eb7fe45702c144ca8b8ec06ebb809f23 }}
         password: ${{ secrets.AzureAppService_ContainerPassword_18d9b200b4c642c7ac8198a21746e48a }}
+
+    - name: Verify Login with pull
+      run: docker pull index.docker.io/${{ secrets.AzureAppService_ContainerUsername_eb7fe45702c144ca8b8ec06ebb809f23 }}/cyoagame:latest
     
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
