--- a/.github/workflows/Deployment_cyoagame.yml
+++ b/.github/workflows/Deployment_cyoagame.yml
@@ -7,6 +7,9 @@ on:
   push:
     branches:
       - Deployment
+    paths:
+      - Backend/**
+      - '!Frontend/**'
   workflow_dispatch:
 
 jobs:
@@ -19,12 +22,20 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    - name: Build Image
+      run: |
+        docker build -t ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_EB7FE45702C144CA8B8EC06EBB809F23 }}/cyoagame:${{ github.sha }} ./Backend/Dockerfile Backend/
+
     - name: Log in to registry
       uses: docker/login-action@v2
       with:
         registry: https://index.docker.io/
         username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_EB7FE45702C144CA8B8EC06EBB809F23 }}
         password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_18D9B200B4C642C7AC8198A21746E48A }}
+
+    - name: Push Image
+      run: |
+        docker push ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_EB7FE45702C144CA8B8EC06EBB809F23 }}/cyoagame:${{ github.sha }}
         
     - name: Build and push container
       run: |
