--- a/.github/workflows/Deployment_cyoagame.yml
+++ b/.github/workflows/Deployment_cyoagame.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Build Image
       run: |
-        docker build -t rylanmattocks/cyoagame:${{ github.sha }} -f ./Backend/Dockerfile Backend/
+        docker build -t ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_EB7FE45702C144CA8B8EC06EBB809F23 }}/cyoagame:${{ github.sha }} -f ./Backend/Dockerfile Backend/
 
     - name: Log in to registry
       uses: docker/login-action@v2
@@ -36,7 +36,7 @@ jobs:
 
     - name: Push Image
       run: |
-        docker push rylanmattocks/cyoagame:${{ github.sha }}
+        docker push ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_EB7FE45702C144CA8B8EC06EBB809F23 }}/cyoagame:${{ github.sha }}
         
     - name: Build and push container
       run: |
