moving dialogue file

--- a/Backend/Game.API/appsettings.json
+++ b/Backend/Game.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "GameSettings" : {
-    "DialogueFilePath": "Game.Utils/Dialogue/Text/dialogue.json"
+    "DialogueFilePath": "Text/dialogue.json"
   }
 }
 
